Add MacOS specific fixes Add BoundedExecutor Add folder choose dialog Add implementation for Undo/Redo menu items